--- a/index.css
+++ b/index.css
@@ -1,9 +1,9 @@
 html{
     text-align: center;
-    background: #bdc3c7;  /* fallback for old browsers */
-    background: -webkit-linear-gradient(to right, #2c3e50, #bdc3c7);  /* Chrome 10-25, Safari 5.1-6 */
-    background: linear-gradient(to right, #2c3e50, #bdc3c7); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
-    
+    background: #bdc3c7; 
+    background: -webkit-linear-gradient(to right, #2c3e50, #bdc3c7);  
+    background: linear-gradient(to right, #2c3e50, #bdc3c7); 
+     
 }
 header{
     font-size: 70px;
@@ -27,4 +27,13 @@ header{
       }
 h2{
     font-family: 'Josefin Sans', sans-serif;
+}
+#photo{
+    height: 520px;
+    width: 600px;
+    box-shadow: 10px 10px 5px #888888;
+}
+#bus{
+    height: 300px;
+    width: 400px;
 }
