--- a/index.css
+++ b/index.css
@@ -9,27 +9,15 @@ html {
 
 header{
     font-size: 70px;
-    color: white;
-    
+    color: #E0EEEE;
+    font-family: 'Raleway', sans-serif;
+    text-shadow: 1px 1px 0 rgba(140,140,140,0.6) , -1px -1px 1px rgba(0,0,0,0.67) ;
     
 }
 
-.inset-text-effect {
-    display: inline-block;
-    padding: 18px 0px 0px 140px;
-    -webkit-box-sizing: content-box;
-    -moz-box-sizing: content-box;
-    box-sizing: content-box;
-        border: none;
-        font: normal 80px/1 "Aladin", Helvetica, sans-serif;
-        text-transform: normal;
-        -o-text-overflow: clip;
-        text-overflow: clip;
-        white-space: pre;
-        text-shadow: 1px 1px 0 rgba(140,140,140,0.6) , -1px -1px 1px rgba(0,0,0,0.67) ;
-      }
 h2{
-    font-family: 'Josefin Sans', sans-serif;
+    /* font-family: 'Josefin Sans', sans-serif; */
+    font-family: 'Acme', sans-serif;
     color: white;
     padding: 70px 150px;
     text-shadow: 1px 1px 0 rgba(140,140,140,0.6) , -1px -1px 1px rgba(0,0,0,0.67) ;
