--- a/index.css
+++ b/index.css
@@ -1,6 +1,6 @@
 html {
     background-image: url("images/102.JPG");
-    height: 50%;
+    height: -webkit-fill-available;
     background-repeat: no-repeat;
     background-size: cover;
     position: relative;
@@ -24,13 +24,14 @@ h2{
     
 }
 #links {
-    text-align: right;
+    text-align: center;
     font-size: 20px;
     text-decoration: none;
-    padding: 150px 40px 10px 0px;
+    padding: 150px 40px 10px 100px;
+    
 }
 a:visited {
-    color: #FFFFFF;
+    color: white;
     background-color: transparent;
 }
 a:hover {
